# neowright

./: .bumpversion.toml  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Justfile  README.md  devenv.nix  install.sh  skills-lock.json
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-use-rust-for-the-core-cli.md  0002-build-a-cli-harness-instead-of-an-mcp-server.md  0003-use-a-pty-backend-for-the-mvp.md  0004-use-agent-readable-markdown-output-by-default.md  0005-use-a-global-session-registry-with-project-local-artifacts.md  0006-bundle-and-install-the-agent-skill-from-the-cli.md
docs/agents/: domain.md
skills/neowright/: SKILL.md
src/: attached_ui.rs  cli.rs  lib.rs  main.rs  nvim.rs  output.rs  screen.rs  session.rs  session_control.rs  session_io.rs  session_launch.rs  session_supervisor.rs
src/commands/: attach.rs  close.rs  eval.rs  exec.rs  keys.rs  list.rs  mod.rs  open.rs  resize.rs  skills.rs  snapshot.rs  target_session.rs  wait.rs
tests/: cli_contract.rs  real_world_usage.rs
tests/support/: mod.rs
