[package]
name = "neowright"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
libc = "0.2.186"
portable-pty = "0.9.0"
rmpv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
unicode-width = "0.2.2"
uuid = { version = "1.23.3", features = ["v4"] }
vt100 = "0.16.2"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
